--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ cffi==1.17.1
 charset-normalizer==3.4.2
 cryptography==43.0.3
 defusedxml==0.7.1
+django-extensions==3.2.3
+gunicorn==21.2.0
 Django==5.2.4
 djangosaml2==1.11.1
 django-environ==0.12.0
