--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,25 +27,31 @@ jobs:
         run: |
           python manage.py test
 
-  # build-linux:
-  #   needs: [test]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
+  build-linux:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-  #     - name: Build Docker image (Linux)
-  #       uses: docker/build-push-action@v4
-  #       with:
-  #         context: .
-  #         file: ./Dockerfile.linux
-  #         push: false
-  #         tags: e2ip-iam-lab:linux
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Docker image (Linux)
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/secureauth:linux -f Dockerfile.linux .
+
+      - name: Push Linux image
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/secureauth:linux
 
   # build-windows:
-  #   needs: [test]
+  #   needs: test
   #   runs-on: windows-latest
   #   steps:
   #     - uses: actions/checkout@v3
