--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,9 +33,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
@@ -50,21 +47,24 @@ jobs:
         run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/secureauth:linux
 
-  # build-windows:
-  #   needs: test
-  #   runs-on: windows-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
+  build-windows:
+    needs: test
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v2
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-  #     - name: Build Docker image (Windows)
-  #       uses: docker/build-push-action@v4
-  #       with:
-  #         context: .
-  #         file: ./Dockerfile.windows
-  #         push: false
-  #         tags: e2ip-iam-lab:windows
+      - name: Build Docker image (Windows)
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/secureauth:windows -f Dockerfile.windows .
+
+      - name: Push Windows image
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/secureauth:windows
 
   
