--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -67,4 +67,22 @@ jobs:
         run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/secureauth:windows
 
+  create-manifest:
+    needs: [build-linux, build-windows]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Create and push manifest
+        run: |
+          docker manifest create ${{ secrets.DOCKER_USERNAME }}/secureauth:latest \
+            ${{ secrets.DOCKER_USERNAME }}/secureauth:linux \
+            ${{ secrets.DOCKER_USERNAME }}/secureauth:windows
+          docker manifest push ${{ secrets.DOCKER_USERNAME }}/secureauth:latest
+
+
   
