--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -4,13 +4,26 @@ FROM mcr.microsoft.com/windows/servercore:ltsc2019
 # Install Python 3.9 using a more optimized approach
 SHELL ["powershell", "-Command"]
 
-# Download Python installer directly instead of using Chocolatey to reduce layers
+# Download Python installer directly and ensure pip is in PATH
 RUN $ErrorActionPreference = 'Stop'; \
     $ProgressPreference = 'SilentlyContinue'; \
     Invoke-WebRequest -Uri 'https://www.python.org/ftp/python/3.9.7/python-3.9.7-amd64.exe' -OutFile 'python.exe'; \
     Start-Process python.exe -ArgumentList '/quiet', 'InstallAllUsers=1', 'PrependPath=1', 'Include_test=0' -Wait; \
     Remove-Item -Force python.exe; \
-    [Environment]::SetEnvironmentVariable('PATH', $env:PATH, [EnvironmentVariableTarget]::Machine);
+    $env:PATH = [System.Environment]::GetEnvironmentVariable('PATH', 'Machine'); \
+    Write-Host "Python installed, PATH = $env:PATH";
+
+# Verify Python installation and refresh PATH
+RUN $env:PATH = [System.Environment]::GetEnvironmentVariable('PATH', 'Machine'); \
+    if (Test-Path -Path 'C:\Program Files\Python39\python.exe') { \
+    Write-Host "Python found at C:\Program Files\Python39\python.exe"; \
+    $env:PATH += ";C:\Program Files\Python39;C:\Program Files\Python39\Scripts"; \
+    [Environment]::SetEnvironmentVariable('PATH', $env:PATH, [EnvironmentVariableTarget]::Machine); \
+    } else { \
+    Write-Host "Looking for Python installation..."; \
+    Get-ChildItem 'C:\Program Files' | ForEach-Object { Write-Host $_.FullName }; \
+    throw "Python installation not found"; \
+    }
 
 # Set working directory
 WORKDIR C:/app
@@ -18,8 +31,9 @@ WORKDIR C:/app
 # Copy only requirements first for better layer caching
 COPY requirements.txt C:/app/
 
-# Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# Install dependencies using full path to pip
+RUN python -m pip install --upgrade pip && \
+    python -m pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application
 COPY . C:/app/
