--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,22 +39,17 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Build Docker image (Linux)
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/secureauth:linux -f Dockerfile.linux .
 
-      - name: Build and push Linux image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile.linux
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/secureauth:linux
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/secureauth:linux-cache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/secureauth:linux-cache,mode=max
+      - name: Push Linux image
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/secureauth:linux
 
   build-windows:
     needs: test
-    runs-on: windows-latest
+    runs-on: [self-hosted, Windows, X64]
     steps:
       - uses: actions/checkout@v3
 
@@ -88,3 +83,6 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/secureauth:linux \
             ${{ secrets.DOCKER_USERNAME }}/secureauth:windows
           docker manifest push ${{ secrets.DOCKER_USERNAME }}/secureauth:latest
+
+
+  
