--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,19 +33,23 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image (Linux)
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/secureauth:linux -f Dockerfile.linux .
-
-      - name: Push Linux image
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/secureauth:linux
+      - name: Build and push multi-arch Linux image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: Dockerfile.linux
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/secureauth:linux
 
   build-windows:
     needs: test
@@ -82,7 +86,11 @@ jobs:
           docker manifest create ${{ secrets.DOCKER_USERNAME }}/secureauth:latest \
             ${{ secrets.DOCKER_USERNAME }}/secureauth:linux \
             ${{ secrets.DOCKER_USERNAME }}/secureauth:windows
+
+          # Annotate the manifest with platform details
+          docker manifest annotate ${{ secrets.DOCKER_USERNAME }}/secureauth:latest \
+            ${{ secrets.DOCKER_USERNAME }}/secureauth:linux --os linux
+          docker manifest annotate ${{ secrets.DOCKER_USERNAME }}/secureauth:latest \
+            ${{ secrets.DOCKER_USERNAME }}/secureauth:windows --os windows
+
           docker manifest push ${{ secrets.DOCKER_USERNAME }}/secureauth:latest
-
-
-  
