--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           python manage.py test
 
-  build-linux:
+  build-linux-amd64:
     needs: test
     runs-on: ubuntu-latest
     steps:
@@ -42,14 +42,38 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push multi-arch Linux image
+      - name: Build and push Linux AMD64 image
         uses: docker/build-push-action@v4
         with:
           context: .
           file: Dockerfile.linux
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/secureauth:linux
+          tags: ${{ secrets.DOCKER_USERNAME }}/secureauth:linux-amd64
+
+  build-linux-arm64:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Linux ARM64 image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: Dockerfile.linux
+          platforms: linux/arm64
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/secureauth:linux-arm64
 
   build-windows:
     needs: test
@@ -72,7 +96,7 @@ jobs:
           docker push ${{ secrets.DOCKER_USERNAME }}/secureauth:windows
 
   create-manifest:
-    needs: [build-linux, build-windows]
+    needs: [build-linux-amd64, build-linux-arm64, build-windows]
     runs-on: ubuntu-latest
     steps:
       - name: Log in to Docker Hub
@@ -84,6 +108,7 @@ jobs:
       - name: Create and push manifest
         run: |
           docker manifest create ${{ secrets.DOCKER_USERNAME }}/secureauth:latest \
-            ${{ secrets.DOCKER_USERNAME }}/secureauth:linux \
+            ${{ secrets.DOCKER_USERNAME }}/secureauth:linux-amd64 \
+            ${{ secrets.DOCKER_USERNAME }}/secureauth:linux-arm64 \
             ${{ secrets.DOCKER_USERNAME }}/secureauth:windows
           docker manifest push ${{ secrets.DOCKER_USERNAME }}/secureauth:latest
