--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -75,28 +75,28 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/secureauth:linux-arm64
 
-  build-windows:
-    needs: test
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v3
+  # build-windows:
+  #   needs: test
+  #   runs-on: windows-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+  #     - name: Log in to Docker Hub
+  #       uses: docker/login-action@v2
+  #       with:
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image (Windows)
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/secureauth:windows -f Dockerfile.windows .
+  #     - name: Build Docker image (Windows)
+  #       run: |
+  #         docker build -t ${{ secrets.DOCKER_USERNAME }}/secureauth:windows -f Dockerfile.windows .
 
-      - name: Push Windows image
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/secureauth:windows
+  #     - name: Push Windows image
+  #       run: |
+  #         docker push ${{ secrets.DOCKER_USERNAME }}/secureauth:windows
 
   create-manifest:
-    needs: [build-linux-amd64, build-linux-arm64, build-windows]
+    needs: [build-linux-amd64, build-linux-arm64]
     runs-on: ubuntu-latest
     steps:
       - name: Log in to Docker Hub
@@ -107,8 +107,10 @@ jobs:
 
       - name: Create and push manifest
         run: |
+          # Create the manifest list
           docker manifest create ${{ secrets.DOCKER_USERNAME }}/secureauth:latest \
             ${{ secrets.DOCKER_USERNAME }}/secureauth:linux-amd64 \
-            ${{ secrets.DOCKER_USERNAME }}/secureauth:linux-arm64 \
-            ${{ secrets.DOCKER_USERNAME }}/secureauth:windows
+            ${{ secrets.DOCKER_USERNAME }}/secureauth:linux-arm64
+            
+          # Push the manifest
           docker manifest push ${{ secrets.DOCKER_USERNAME }}/secureauth:latest
