--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,12 +27,12 @@ jobs:
         run: |
           python manage.py test
 
-  build-linux-amd64:
+  build-linux:
     needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -42,38 +42,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Linux AMD64 image
+      - name: Build and push Linux multi-platform image
         uses: docker/build-push-action@v4
         with:
           context: .
           file: Dockerfile.linux
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/secureauth:linux-amd64
-
-  build-linux-arm64:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Linux ARM64 image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: Dockerfile.linux
-          platforms: linux/arm64
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/secureauth:linux-arm64
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/secureauth:linux
 
   # build-windows:
   #   needs: test
@@ -96,7 +73,7 @@ jobs:
   #         docker push ${{ secrets.DOCKER_USERNAME }}/secureauth:windows
 
   create-manifest:
-    needs: [build-linux-amd64, build-linux-arm64]
+    needs: build-linux
     runs-on: ubuntu-latest
     steps:
       - name: Log in to Docker Hub
@@ -104,13 +81,16 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
       - name: Create and push manifest
         run: |
-          # Create the manifest list
+          # Extract individual platform images from the Linux manifest list
+          LINUX_AMD64_DIGEST=$(docker manifest inspect ${{ secrets.DOCKER_USERNAME }}/secureauth:linux | jq -r '.manifests[] | select(.platform.architecture=="amd64") | .digest')
+          LINUX_ARM64_DIGEST=$(docker manifest inspect ${{ secrets.DOCKER_USERNAME }}/secureauth:linux | jq -r '.manifests[] | select(.platform.architecture=="arm64") | .digest')
+          
+          # Create new manifest with individual platform images + Windows
           docker manifest create ${{ secrets.DOCKER_USERNAME }}/secureauth:latest \
-            ${{ secrets.DOCKER_USERNAME }}/secureauth:linux-amd64 \
-            ${{ secrets.DOCKER_USERNAME }}/secureauth:linux-arm64
-            
-          # Push the manifest
+            ${{ secrets.DOCKER_USERNAME }}/secureauth@$LINUX_AMD64_DIGEST \
+            ${{ secrets.DOCKER_USERNAME }}/secureauth@$LINUX_ARM64_DIGEST \
+          
           docker manifest push ${{ secrets.DOCKER_USERNAME }}/secureauth:latest
+    
