--- a/docker/Dockerfile.linux
+++ b/docker/Dockerfile.linux
@@ -5,10 +5,10 @@ ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-COPY requirements.txt /app/
+COPY ../requirements.txt /app/
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . /app/
+COPY .. /app/
 
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
