--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,12 +18,23 @@ jobs:
         with:
           python-version: "3.9"
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libxml2-dev libxmlsec1-dev libxmlsec1-openssl
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run Django tests
+        env:
+          DJANGO_SETTINGS_MODULE: auth_project.settings
+          CI: true
+          DEBUG: false
+          SECRET_KEY: django-insecure-ci-test-key-not-for-production
+          ALLOWED_HOSTS: localhost,127.0.0.1
         run: |
           python manage.py test
 
