--- a/docker/Dockerfile.windows
+++ b/docker/Dockerfile.windows
@@ -1,10 +1,18 @@
 # Use a Windows base image with Python installed, or install Python in the Dockerfile
 FROM mcr.microsoft.com/windows/servercore:ltsc2022
 
-# Install Python 3.9 manually or via package manager (example below uses Chocolatey)
+# Install Chocolatey and Python
 SHELL ["powershell", "-Command"]
 
-RUN Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1')); choco install -y python --version=3.9.7 xmlsec
+# Install Chocolatey
+RUN Set-ExecutionPolicy Bypass -Scope Process -Force; \
+    [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; \
+    iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
+
+# Install Python 3.9
+RUN choco install -y python --version=3.9.7
+
+# Note: xmlsec1 for Windows will be handled via pip requirements
 
 WORKDIR C:/app
 
