--- a/docker/Dockerfile.windows
+++ b/docker/Dockerfile.windows
@@ -22,4 +22,5 @@ RUN python -m pip install --no-cache-dir -r requirements.txt
 
 COPY . C:/app/
 
-CMD ["python", "manage.py", "runserver_plus", "--cert-file", "ssl/cert.pem", "--key-file", "ssl/key.pem", "0.0.0.0:8000"]
+# Run migrations and start server
+CMD ["powershell", "-c", "python manage.py migrate; python manage.py runserver_plus --cert-file ssl/cert.pem --key-file ssl/key.pem 0.0.0.0:8000"]
