--- a/docker/Dockerfile.windows
+++ b/docker/Dockerfile.windows
@@ -23,4 +23,4 @@ RUN python -m pip install --no-cache-dir -r requirements.txt
 COPY . C:/app/
 
 # Run migrations and start server
-CMD ["powershell", "-c", "python manage.py migrate; python manage.py runserver_plus --cert-file ssl/cert.pem --key-file ssl/key.pem 0.0.0.0:8000"]
+CMD ["powershell", "-c", "python manage.py migrate; python manage.py runserver_plus --cert-file=ssl/cert.pem --key-file=ssl/key.pem 0.0.0.0:8000"]
