--- a/docker/Dockerfile.windows
+++ b/docker/Dockerfile.windows
@@ -24,17 +24,17 @@ WORKDIR /app
 COPY requirements.txt /app/
 RUN python -m pip install --no-cache-dir -r requirements.txt
 
-# Download and install xmlsec1 binaries (simpler approach)
-RUN choco install -y 7zip; \
-    $xmlsecUrl = 'https://www.zlatkovic.com/pub/libxml/64bit/xmlsec1-1.2.20-win32-x86_64.7z'; \
+# Download and install xmlsec1 binaries from zlatkovic.com (official Windows binaries)
+RUN $xmlsecUrl = 'https://www.zlatkovic.com/pub/libxml/64bit/xmlsec1-1.2.20-win32-x86_64.7z'; \
     $xmlsecZip = 'C:\temp\xmlsec.7z'; \
-    New-Item -ItemType Directory -Force -Path C:\temp, C:\xmlsec; \
+    $xmlsecDir = 'C:\xmlsec'; \
+    New-Item -ItemType Directory -Force -Path C:\temp; \
+    New-Item -ItemType Directory -Force -Path $xmlsecDir; \
     [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; \
     Invoke-WebRequest -Uri $xmlsecUrl -OutFile $xmlsecZip; \
-    $sevenZip = Get-Command '7z.exe' -ErrorAction SilentlyContinue; \
-    if (-not $sevenZip) { $sevenZip = 'C:\Program Files\7-Zip\7z.exe' }; \
-    & $sevenZip x $xmlsecZip '-oC:\xmlsec'; \
-    Remove-Item $xmlsecZip
+    choco install -y 7zip; \
+    & 'C:\ProgramData\chocolatey\bin\7z.exe' x $xmlsecZip -o"$xmlsecDir" -y; \
+    Remove-Item $xmlsecZip -Force
 
 # Add xmlsec1 to PATH and set environment variable
 ENV PATH="C:\xmlsec\bin;${PATH}"
@@ -43,10 +43,9 @@ ENV XMLSEC_BINARY="C:\xmlsec\bin\xmlsec1.exe"
 # Copy application code
 COPY . /app/
 
-# Create ssl directory and generate self-signed certificates using OpenSSL
+# Create ssl directory and generate self-signed certificates using Windows paths
 RUN New-Item -ItemType Directory -Force -Path ssl; \
-    $env:PATH = 'C:\Program Files\OpenSSL-Win64\bin;' + $env:PATH; \
-    & 'C:\Program Files\OpenSSL-Win64\bin\openssl.exe' req -new -newkey rsa:4096 -days 365 -nodes -x509 -subj '/C=US/ST=State/L=City/O=Organization/CN=localhost' -keyout ssl/key.pem -out ssl/cert.pem
+    & 'C:\Program Files\OpenSSL\bin\openssl.exe' req -new -newkey rsa:4096 -days 365 -nodes -x509 -subj '/C=US/ST=State/L=City/O=Organization/CN=localhost' -keyout ssl\key.pem -out ssl\cert.pem
 
 # Expose port 8000
 EXPOSE 8000
