the old dockerfile to check some probs

--- a/docker/Dockerfile.windows
+++ b/docker/Dockerfile.windows
@@ -1,11 +1,7 @@
-# Use Windows base image
+# Use a Windows base image with Python installed, or install Python in the Dockerfile
 FROM mcr.microsoft.com/windows/servercore:ltsc2022
 
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-
-# Use PowerShell
+# Install Chocolatey and Python
 SHELL ["powershell", "-Command"]
 
 # Install Chocolatey
@@ -13,45 +9,18 @@ RUN Set-ExecutionPolicy Bypass -Scope Process -Force; \
     [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; \
     iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
 
-# Install dependencies
+# Install Python 3.9
 RUN choco install -y python --version=3.9.7
-RUN choco install -y openssl  
-RUN choco install -y 7zip
 
-# Find where Python was actually installed
-RUN Get-ChildItem C:\ -Name "*Python*" -Directory -Recurse -ErrorAction SilentlyContinue
-RUN Get-ChildItem "C:\\ProgramData\\chocolatey\\lib\\python\\tools" -ErrorAction SilentlyContinue
+# Note: xmlsec1 for Windows will be handled via pip requirements
 
-# Set working directory
-WORKDIR /app
+WORKDIR C:/app
 
-# Copy and install requirements using chocolatey's Python path
-COPY requirements.txt .
-RUN & "C:\\ProgramData\\chocolatey\\lib\\python\\tools\\python.exe" -m pip install --upgrade pip
-RUN & "C:\\ProgramData\\chocolatey\\lib\\python\\tools\\python.exe" -m pip install -r requirements.txt
+COPY requirements.txt C:/app/
 
-# Install xmlsec1
-RUN $url = 'https://www.zlatkovic.com/pub/libxml/64bit/xmlsec1-1.2.20-win32-x86_64.7z'; \
-    $zip = 'xmlsec.7z'; \
-    Invoke-WebRequest -Uri $url -OutFile $zip; \
-    & 'C:\\ProgramData\\chocolatey\\bin\\7z.exe' x $zip -oC:\\xmlsec -y; \
-    Remove-Item $zip
+RUN python -m pip install --no-cache-dir -r requirements.txt
 
-# Set xmlsec PATH
-ENV PATH="C:\\xmlsec\\bin;${PATH}"
-ENV XMLSEC_BINARY="C:\\xmlsec\\bin\\xmlsec1.exe"
+COPY . C:/app/
 
-# Copy application
-COPY . .
-
-# Generate SSL certificates
-RUN New-Item -ItemType Directory -Force -Path ssl; \
-    openssl req -new -newkey rsa:4096 -days 365 -nodes -x509 \
-    -subj '/C=US/ST=State/L=City/O=Organization/CN=localhost' \
-    -keyout ssl/key.pem -out ssl/cert.pem
-
-# Expose port
-EXPOSE 8000
-
-# Start application
-CMD ["powershell", "-Command", "& 'C:\\ProgramData\\chocolatey\\lib\\python\\tools\\python.exe' manage.py migrate --noinput; & 'C:\\ProgramData\\chocolatey\\lib\\python\\tools\\python.exe' manage.py runserver_plus --cert-file=ssl/cert.pem --key-file=ssl/key.pem 0.0.0.0:8000"]
+# Run migrations and start server
+CMD ["powershell", "-c", "python manage.py migrate; python manage.py runserver_plus --cert-file=ssl/cert.pem --key-file=ssl/key.pem 0.0.0.0:8000"]
