--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,14 @@ xmlsec>=1.3.3
 dj-database-url>=0.5.0
 django-extensions>=3.2.0
 Werkzeug>=2.0
+
+# WebAuthn/FIDO2 Support for YubiKey MFA
+webauthn>=1.11.0
+cryptography>=41.0.0
+cbor2>=5.4.0
+pydantic>=2.0.0
+
+# Enhanced security features
+pyotp>=2.8.0
+qrcode[pil]>=7.4.0
+pillow>=10.0.0
