fix the MFA authentication using YubiKey, and change the access adress to secureauth.local, also reconfigured it in the ADFS

--- a/.env
+++ b/.env
@@ -1,22 +1,17 @@
 # Django Configuration
-SECRET_KEY=r_c3wx_m$c0r+0j04theile059ubymog0w%^_&ster3jd*&_d7
 DEBUG=True
-ALLOWED_HOSTS=127.0.0.1,localhost,0.0.0.0,192.168.1.46
+SECRET_KEY=your_secret_key_here_change_this_in_production
 
-# Database Configuration
-DATABASE_URL=sqlite:///db.sqlite3
+# WebAuthn Configuration for Domain Access
+WEBAUTHN_RP_ID=secureauth.local
+WEBAUTHN_RP_NAME=SecureAuth  
+WEBAUTHN_ORIGIN=https://secureauth.local:8000
 
-# SAML Configuration - Required for SSO to work
-SAML_ENTITY_ID=http://192.168.1.46:8000/saml2/metadata/
-SAML_ACS_URL=https://192.168.1.46:8000/custom-saml-acs/
-SAML_SLS_URL=http://192.168.1.46:8000/saml2/ls/
-
-# Optional SAML Configuration
-XMLSEC_BINARY=/opt/homebrew/bin/xmlsec1
+# SAML/ADFS Configuration for Domain Access
+SAML_ENTITY_ID=https://secureauth.local:8000/saml2/metadata/
+SAML_ACS_URL=https://secureauth.local:8000/custom-saml-acs/
+SAML_SLS_URL=https://secureauth.local:8000/saml2/sls/
 
 # Security Settings
-SESSION_COOKIE_SECURE=False
-SESSION_COOKIE_SAMESITE=Lax
-CSRF_COOKIE_SECURE=False
-CSRF_COOKIE_SAMESITE=Lax
+ALLOWED_HOSTS=127.0.0.1,localhost,192.168.1.46,secureauth.local
 SECURE_SSL_REDIRECT=False
