improve the edit profile page - still just to fix the ldap communication between the AD and the Django app so i can modify the informations of the user

--- a/.env
+++ b/.env
@@ -15,3 +15,11 @@ SAML_SLS_URL=https://secureauth.local:8000/saml2/sls/
 # Security Settings
 ALLOWED_HOSTS=127.0.0.1,localhost,192.168.1.46,secureauth.local
 SECURE_SSL_REDIRECT=False
+
+# Active Directory Configuration
+# Replace these placeholder values with your actual Active Directory settings
+AD_SERVER=ldap://192.168.1.42
+AD_DOMAIN=my-lab.local
+AD_USERNAME=Administrator@my-lab.local
+AD_PASSWORD=Qwerty123
+AD_SEARCH_BASE=DC=my-lab,DC=local
