--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@ requests>=2.28.0
 xmlsec>=1.3.3
 dj-database-url>=0.5.0
 django-extensions>=3.2.0
+google-api-python-client>=2.0.0
+google-auth>=2.0.0
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.1.0
 Werkzeug>=2.0
 
 # WebAuthn/FIDO2 Support for YubiKey MFA
